--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * linguist-vendored
 *.java linguist-vendored=false
+*.javascript linguist-vendored=false
 *.sh linguist-vendored=false
 *.sql linguist-vendored=false
 *.R linguist-vendored=false
