--- a/DynamicHanaAdmin/pom.xml
+++ b/DynamicHanaAdmin/pom.xml
@@ -149,6 +149,11 @@
 			<version>2.7.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 
 	</dependencies>
 
