--- a/DynamicHana/pom.xml
+++ b/DynamicHana/pom.xml
@@ -132,17 +132,18 @@
 			<artifactId>log4jdbc-remix</artifactId>
 			<version>0.2.7</version>
 		</dependency>
-
+		<!-- r연동 -->
+		<!-- REngine -->
 		<dependency>
-			<groupId>com.github.javafaker</groupId>
-			<artifactId>javafaker</artifactId>
-			<version>1.0.2</version>
+			<groupId>org.rosuda.REngine</groupId>
+			<artifactId>REngine</artifactId>
+			<version>2.1.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.python/jython -->
+		<!-- Rserve -->
 		<dependency>
-			<groupId>org.python</groupId>
-			<artifactId>jython</artifactId>
-			<version>2.7.2</version>
+			<groupId>org.rosuda.REngine</groupId>
+			<artifactId>Rserve</artifactId>
+			<version>1.8.1</version>
 		</dependency>
 
 
