--- a/DynamicHana/pom.xml
+++ b/DynamicHana/pom.xml
@@ -145,6 +145,12 @@
 			<artifactId>Rserve</artifactId>
 			<version>1.8.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.5.2</version>
+		</dependency>
 
 
 	</dependencies>
